Today I worked on adding the logo and the CSS of the index page

--- a/index.html
+++ b/index.html
@@ -9,17 +9,35 @@
 
 <body>
   <!-- Header-->
-  <h1>Expect the Unexpected</h1>
+  <!-- <div class="header">
+    <img src="logo.png" alt="logo"/>
+    <h1>Expect the Unexpected</h1>
+</div> -->
+
+<div class="header">
+
+  <div class="header-left">
+    <img src="logo.png" alt="logo" class="logo" height="100px" width="100px">
+  </div>
+
+
+  <div class="header-right">
+    <h1>Expect the Unexpected</h1>
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+</div>
 
   <!-- Navigation bar code - links the pages to the menubar -->
-    <div id="navbar">
+    <!-- <div id="navbar">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="creditsHTML.html">About Us</a></li>
           <li><a href="UEHTML.html">Modules</a></li>
           <li><a href="todolistHTML.html">Achievements</a></li>
         </ul>
-    </div>
+    </div> -->
 
   <!-- Introduction container -->
     <div class="container1">
