Latest header with logo, navigation bar and welcome message

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Expect the Unexpected</title>
-  <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -15,34 +15,27 @@
 </div> -->
 
 <div class="header">
-
-  <div class="header-left">
-    <img src="logo.png" alt="logo" class="logo" height="100px" width="100px">
-  </div>
-
-
-  <div class="header-right">
-    <h1>Expect the Unexpected</h1>
-    <a class="active" href="#home">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+  <div class="header-heading">
+      <img src="logo.png" alt="logo" class="logo">
+    <span>Money Modules</span>
   </div>
 </div>
+<div class="nav-bar">
+  <a class="active" href="#home">Home</a>
+  <a href="#modules">Modules</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
 
-  <!-- Navigation bar code - links the pages to the menubar -->
-    <!-- <div id="navbar">
-        <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="creditsHTML.html">About Us</a></li>
-          <li><a href="UEHTML.html">Modules</a></li>
-          <li><a href="todolistHTML.html">Achievements</a></li>
-        </ul>
-    </div> -->
+
 
   <!-- Introduction container -->
     <div class="container1">
       <p> Talofa Lava! Kia Ora! Warm Pacific Greetings! Welcome! </p>
     </div>
+
+    
+
 
 </body>
 
