All the pages that are linked in the navigation bar

--- a/aboutus.html
+++ b/aboutus.html
@@ -24,23 +24,18 @@
   <a class="active" href="index.html">Home</a>
   <a href="aboutus.html">About</a>
   <a href="modules.html">Modules</a>
-  <a href="contactus.html">Contact</a>
+  <a href="contactus.html">Contact</a>  
 </div>
 
 
 
   <!-- Introduction container -->
     <div class="container1">
-      <p> Talofa Lava! Kia Ora! Warm Pacific Greetings! Welcome!</p>
+      <p> This educational resource has been created to help Māori
+      and Pasifika students learn about financial literacy. The aim is to
+      educate and empower Māori and Pasifika youth to embark on their own
+      financial indepence journeys. </p>
     </div>
 
-  
-
-
-
-
-
-
-</body>
 
 </html>
