--- a/contactus.html
+++ b/contactus.html
@@ -24,23 +24,13 @@
   <a class="active" href="index.html">Home</a>
   <a href="aboutus.html">About</a>
   <a href="modules.html">Modules</a>
-  <a href="contactus.html">Contact</a>
+  <a href="contactus.html">Contact</a>  
 </div>
 
 
 
   <!-- Introduction container -->
-    <div class="container1">
-      <p> Talofa Lava! Kia Ora! Warm Pacific Greetings! Welcome!</p>
-    </div>
+    <p>Insert form</p>
 
-  
-
-
-
-
-
-
-</body>
 
 </html>
