After using Beautify to tidy up the layout of the code

--- a/modules.html
+++ b/modules.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Expect the Unexpected</title>
+  <title>Modules</title>
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="styles.css">
 </head>
 
 <body>
   <!-- Header-->
-  <!-- <div class="header">
-    <img src="logo.png" alt="logo"/>
-    <h1>Expect the Unexpected</h1>
-</div> -->
 
-<div class="header">
-  <div class="header-heading">
+
+  <div class="header">
+    <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
-    <span>Money Modules</span>
+      <span>Money Modules</span>
+    </div>
   </div>
-</div>
-<div class="nav-bar">
-  <a class="active" href="index.html">Home</a>
-  <a href="aboutus.html">About</a>
-  <a href="modules.html">Modules</a>
-  <a href="contactus.html">Contact</a>  
-</div>
+  <div class="nav-bar">
+    <a class="active" href="index.html">Home</a>
+    <a href="aboutus.html">About</a>
+    <a href="modules.html">Modules</a>
+    <a href="contactus.html">Contact</a>
+  </div>
 
 
 
   <!-- Introduction container -->
-    <div class="container1">
-      <p> This educational resource has been created to help Māori
-      and Pasifika students learn about financial literacy. The aim is to
-      educate and empower Māori and Pasifika youth to embark on their own
-      financial indepence journeys. </p>
-    </div>
+
 
 
 </html>
