--- a/contactus.html
+++ b/contactus.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Expect the Unexpected</title>
+  <title>Contact Us</title>
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="styles.css">
 </head>
 
 <body>
   <!-- Header-->
-  <!-- <div class="header">
-    <img src="logo.png" alt="logo"/>
-    <h1>Expect the Unexpected</h1>
-</div> -->
-
-<div class="header">
-  <div class="header-heading">
+  <div class="header">
+    <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
-    <span>Money Modules</span>
+      <span>Money Modules</span>
+    </div>
   </div>
-</div>
-<div class="nav-bar">
-  <a class="active" href="index.html">Home</a>
-  <a href="aboutus.html">About</a>
-  <a href="modules.html">Modules</a>
-  <a href="contactus.html">Contact</a>  
-</div>
+  <div class="nav-bar">
+    <a class="active" href="index.html">Home</a>
+    <a href="aboutus.html">About</a>
+    <a href="modules.html">Modules</a>
+    <a href="contactus.html">Contact</a>
+  </div>
 
 
 
   <!-- Introduction container -->
-    <p>Insert form</p>
+  <p>Insert form</p>
 
 
 </html>
