--- a/index.html
+++ b/index.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Expect the Unexpected</title>
+  <title>Money Modules</title>
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="styles.css">
 </head>
 
 <body>
   <!-- Header-->
-  <!-- <div class="header">
-    <img src="logo.png" alt="logo"/>
-    <h1>Expect the Unexpected</h1>
-</div> -->
-
-<div class="header">
-  <div class="header-heading">
+  <div class="header">
+    <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
-    <span>Money Modules</span>
+      <span>Money Modules</span>
+    </div>
   </div>
-</div>
-<div class="nav-bar">
-  <a class="active" href="index.html">Home</a>
-  <a href="aboutus.html">About</a>
-  <a href="modules.html">Modules</a>
-  <a href="contactus.html">Contact</a>
-</div>
+
+  <div class="nav-bar">
+    <a class="active" href="index.html">Home</a>
+    <a href="aboutus.html">About</a>
+    <a href="modules.html">Modules</a>
+    <a href="contactus.html">Contact</a>
+  </div>
 
 
 
   <!-- Introduction container -->
-    <div class="container1">
-      <p> Talofa Lava! Kia Ora! Warm Pacific Greetings! Welcome!</p>
-    </div>
+  <div class="container1">
+    <p> Talofa Lava! Kia Ora! Warm Pacific Greetings! Welcome!</p>
+  </div>
 
-  
-
-
-
-
-
-
+  <div class="row">
+    <div class="column"></div>
+    <p><strong>Introduction to Financial Literacy</strong></p>
+    <div class="column"></div>
+    <p><strong>Budgeting</strong></p>
+    <div class="column"></div>
+    <p><strong>Saving</strong></p>
+  </div>
 </body>
 
 </html>
