The draft files - Still need to work on the CSS of the whole website, testing and feedback

--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
   <div class="header">
     <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
-      <span>Money Modules</span>
+      <span>About Us</span>
     </div>
   </div>
   <div class="nav-bar">
@@ -34,6 +34,6 @@
       educate and empower Māori and Pasifika youth to embark on their journey
       towards financial literacy. </p>
   </div>
-
+</body>
 
 </html>
