--- a/contactus.html
+++ b/contactus.html
@@ -13,7 +13,7 @@
   <div class="header">
     <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
-      <span>Money Modules</span>
+      <span>Contact Us</span>
     </div>
   </div>
   <div class="nav-bar">
@@ -25,8 +25,8 @@
 
 
 
-  <!-- Introduction container -->
+  <!-- Contact Us Form -->
   <p>Insert form</p>
 
-
+</body>
 </html>
