--- a/index.html
+++ b/index.html
@@ -31,14 +31,11 @@
     <p> Talofa Lava! Kia Ora! Warm Pacific Greetings! Welcome!</p>
   </div>
 
-  <div class="row">
-    <div class="column"></div>
-    <p><strong>Introduction to Financial Literacy</strong></p>
-    <div class="column"></div>
-    <p><strong>Budgeting</strong></p>
-    <div class="column"></div>
-    <p><strong>Saving</strong></p>
-  </div>
+  <div class="container">
+   <div class="column-center">Column center</div>
+   <div class="column-left">Column left</div>
+   <div class="column-right">Column right</div>
+</div>
 </body>
 
 </html>
