--- a/modules.html
+++ b/modules.html
@@ -15,7 +15,7 @@
   <div class="header">
     <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
-      <span>Money Modules</span>
+      <span>Modules</span>
     </div>
   </div>
   <div class="nav-bar">
@@ -25,10 +25,10 @@
     <a href="contactus.html">Contact</a>
   </div>
 
+  <a href="budgeting.html">Budgeting Module</a>
+
+  <!-- Modules -->
 
 
-  <!-- Introduction container -->
-
-
-
+</body>
 </html>
