--- a/quiz.html
+++ b/quiz.html
@@ -1,41 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz</title>
-  <!-- <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css"> -->
+  <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="styles.css">
 </head>
 
 <body>
+  <div class="header">
+    <div class="header-heading">
+      <img src="logo.png" alt="logo" class="logo">
+      <span>Budgeting Quiz</span>
+    </div>
+  </div>
+
+  <div class="nav-bar">
+    <a class="active" href="index.html">Home</a>
+    <a href="aboutus.html">About</a>
+    <a href="modules.html">Modules</a>
+    <a href="contactus.html">Contact</a>
+  </div>
+
   <div class="quiz-container" id="quiz">
     <div class="quiz-header">
       <h2 id="question">Question Text</h2>
-        <ul>
-          <li>
-            <input type="radio" name="answer" id="a" class="answer">
-            <label for="a" id="optionA">Answer</label>
-          </li>
+      <ul>
+        <li>
+          <input type="radio" name="answer" id="a" class="answer">
+          <label for="a" id="optionA">Answer</label>
+        </li>
 
-          <li>
-            <input type="radio" name="answer" id="b" class="answer">
-            <label for="b" id="optionB">Answer</label>
-          </li>
+        <li>
+          <input type="radio" name="answer" id="b" class="answer">
+          <label for="b" id="optionB">Answer</label>
+        </li>
 
-          <li>
-            <input type="radio" name="answer" id="c" class="answer">
-            <label for="c" id="optionC">Answer</label>
-          </li>
+        <li>
+          <input type="radio" name="answer" id="c" class="answer">
+          <label for="c" id="optionC">Answer</label>
+        </li>
 
-          <li>
-            <input type="radio" name="answer" id="d" class="answer">
-            <label for="d" id="optionD">Answer</label>
-          </li>
+        <li>
+          <input type="radio" name="answer" id="d" class="answer">
+          <label for="d" id="optionD">Answer</label>
+        </li>
 
-        </ul>
-      </div>
-      <button id="submit">Submit</button>
+      </ul>
     </div>
+    <button id="submit">Submit</button>
+  </div>
   <script src="script.js"></script>
 </body>
 
