three column preview of top modules on the homepage

--- a/aboutus.html
+++ b/aboutus.html
@@ -19,8 +19,8 @@
     </div>
   </div>
   <div class="nav-bar">
-    <a class="active" href="index.html">Home</a>
-    <a href="aboutus.html">About</a>
+    <a href="index.html">Home</a>
+    <a class="active" href="aboutus.html">About</a>
     <a href="modules.html">Modules</a>
     <a href="contactus.html">Contact</a>
   </div>
