--- a/budgeting.html
+++ b/budgeting.html
@@ -26,35 +26,29 @@
 
 
   <!-- Contact Us Form -->
-  <h2>Budgeting</h2>
-  <p>Although it may seem basic, budgeting plays an important part in sorting
-  out our finances.
-  <br>
-  <br>
+  <div class="content">
+    <h2>Budgeting Basics</h2>
+    <p>Although it may seem basic, budgeting plays an important part in sorting
+    out our finances.</p>
 
-  First of all you may be asking "What is a budget?" A budget is a statement
-  that records your planned expenditure and your expected income over a certain
-  period of time. This basically means how much you think you'll spend and how
-  much you think you'll earn over a period of time usually a month.
-  <br>
-  <br>
+    <p>First of all you may be asking "What is a budget?" A budget is a statement
+    that records your planned expenditure and your expected income over a certain
+    period of time. This basically means how much you think you'll spend and how
+    much you think you'll earn over a period of time usually a month.</p>
 
-  Income is anything coming into your account like gifts, lunch money, wages or
-  even dividends (which is a word used for income earned on shares).
-  <br>
-  <br>
+    <p>Income is anything coming into your account like gifts, lunch money, wages or
+    even dividends (which is a word used for income earned on shares).</p>
 
-  Expenses is anything going out of your account like
-  car repairs, rent, food, transport etc.
-  <br>
-  <br>
+    <p>Expenses is anything going out of your account like
+    car repairs, rent, food, transport etc.</p>
 
-  For most households the top 3 areas of spending are shelter, food and
-  transport so cautious planning in our budgets in this area will help save so
-  much money which can be dedicated to other areas of spending.
-  </p>
+    <p>For most households the top 3 areas of spending are shelter, food and
+    transport so cautious planning in our budgets in this area will help save so
+    much money which can be dedicated to other areas of spending.</p>
 
-  <a href="quiz.html">Budgeting Quiz</a>
+    <a href="quiz.html">Budgeting Quiz</a>
+  </div>
+
 
 </body>
 
