--- a/index.html
+++ b/index.html
@@ -31,11 +31,55 @@
     <p> Talofa Lava! Kia Ora! Warm Pacific Greetings! Welcome!</p>
   </div>
 
-  <div class="container">
-   <div class="column-center">Column center</div>
-   <div class="column-left">Column left</div>
-   <div class="column-right">Column right</div>
-</div>
+  <div class="triple-containers-container">
+      <div class="triple-container">
+          <div class="triple-container-header">
+              Introduction to Financial Literacy
+          </div>
+          <div class="triple-container-body">
+              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
+              for some information on how to start your journey.
+          </div>
+          <div class="triple-container-footer">
+              <a>
+                  <button class="container-button">
+                      View More
+                  </button>
+              </a>
+          </div>
+      </div>
+      <div class="triple-container">
+          <div class="triple-container-header">
+              Budgeting Basics
+          </div>
+          <div class="triple-container-body">
+              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
+              for some information on how to start your journey.
+          </div>
+          <div class="triple-container-footer">
+              <a>
+                  <button class="container-button">
+                      View More
+                  </button>
+              </a>
+          </div>
+      </div>
+      <div class="triple-container">
+          <div class="triple-container-header">
+              Savings
+          </div>
+          <div class="triple-container-body">
+              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
+              for some information on how to start your journey.
+          </div>
+          <div class="triple-container-footer">
+              <a>
+                  <button class="container-button">
+                      View More
+                  </button>
+              </a>
+          </div>
+      </div>
 </body>
 
 </html>
