--- a/modules.html
+++ b/modules.html
@@ -19,14 +19,15 @@
     </div>
   </div>
   <div class="nav-bar">
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
-    <a href="modules.html">Modules</a>
+    <a class="active" href="modules.html">Modules</a>
     <a href="contactus.html">Contact</a>
   </div>
 
-  <a href="budgeting.html">Budgeting Module</a>
-
+  <h2>Financial Literacy Modules</h2>
+  <li><a href="budgeting.html">Budgeting Module</a>
+  </li>
   <!-- Modules -->
 
 
