--- a/quiz.html
+++ b/quiz.html
@@ -22,7 +22,7 @@
     <a href="modules.html">Modules</a>
     <a href="contactus.html">Contact</a>
   </div>
-
+  <div class="center">
   <div class="quiz-container" id="quiz">
     <div class="quiz-header">
       <h2 id="question">Question Text</h2>
@@ -51,6 +51,7 @@
     </div>
     <button id="submit">Submit</button>
   </div>
+</div>
   <script src="script.js"></script>
 </body>
 
