--- a/contactus.html
+++ b/contactus.html
@@ -17,10 +17,10 @@
     </div>
   </div>
   <div class="nav-bar">
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
     <a href="modules.html">Modules</a>
-    <a href="contactus.html">Contact</a>
+    <a class="active" href="contactus.html">Contact</a>
   </div>
 
 
