I have included all the pages so all links to other pages should work

--- a/modules.html
+++ b/modules.html
@@ -22,14 +22,66 @@
     <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
     <a class="active" href="modules.html">Modules</a>
-    <a href="contactus.html">Contact</a>
+    <a href="resources.html">Resources</a>
   </div>
 
-  <h2>Financial Literacy Modules</h2>
-  <li><a href="budgeting.html">Budgeting Module</a>
-  </li>
-  <!-- Modules -->
 
 
+<!--Modules -->
+  <div class="triple-containers-container">
+      <div class="triple-container">
+          <div class="triple-container-header">
+              Introduction to Financial Literacy
+          </div>
+          <div class="triple-container-body">
+              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
+              for some information on how to start your journey.
+          </div>
+          <div class="triple-container-footer">
+              <a href="intro.html">
+                  <button class="container-button">
+                      View More
+                  </button>
+              </a>
+          </div>
+      </div>
+      <div class="triple-container">
+          <div class="triple-container-header">
+              Budgeting Basics
+          </div>
+          <div class="triple-container-body">
+              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
+              for some information on how to start your journey.
+          </div>
+          <div class="triple-container-footer">
+              <a href="budgeting.html">
+                  <button class="container-button">
+                      View More
+                  </button>
+              </a>
+          </div>
+      </div>
+      <div class="triple-container">
+          <div class="triple-container-header">
+              Savings
+          </div>
+          <div class="triple-container-body">
+              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
+              for some information on how to start your journey.
+          </div>
+          <div class="triple-container-footer">
+              <a href="savings.html">
+                  <button class="container-button">
+                      View More
+                  </button>
+              </a>
+          </div>
+      </div>
+
+      </div>
+      <div class="footer">
+        <p>Disclaimer I am not a financial advisor this is just general advice about
+        financial literacy for educational purposes</p>
+      </div>
 </body>
 </html>
