--- a/savings.html
+++ b/savings.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Budgeting</title>
+  <title>Savings</title>
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="styles.css">
 </head>
 
@@ -13,19 +13,19 @@
   <div class="header">
     <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
-      <span>Budgeting Basics</span>
+      <span>Savings</span>
     </div>
   </div>
   <div class="nav-bar">
-    <a href="index.html">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="aboutus.html">About</a>
-    <a href="modules.html" class="active">Modules</a>
+    <a href="modules.html">Modules</a>
     <a href="resources.html">Resources</a>
   </div>
 
 
 
-  <!-- Contact Us Form -->
+  <!-- Resources Form -->
   <div class="content">
     <h2>Budgeting Basics</h2>
     <p>Although it may seem basic, budgeting plays an important part in sorting
@@ -49,10 +49,10 @@
     <a href="quiz.html">Budgeting Quiz</a>
   </div>
 
-  <div class="footer">
-    <p>Disclaimer I am not a financial advisor this is just general advice about
-    financial literacy for educational purposes</p>
-  </div>
+<div class="footer">
+  <p>Disclaimer I am not a financial advisor this is just general advice about
+  financial literacy for educational purposes</p>
+</div>
 </body>
 
 </html>
