--- a/index.html
+++ b/index.html
@@ -21,65 +21,22 @@
     <a class="active" href="index.html">Home</a>
     <a href="aboutus.html">About</a>
     <a href="modules.html">Modules</a>
-    <a href="contactus.html">Contact</a>
+    <a href="resources.html">Resources</a>
   </div>
 
 
 
   <!-- Introduction container -->
-  <div class="container1">
+  <div class="intro-container">
     <p> Talofa Lava! Kia Ora! Warm Pacific Greetings! Welcome!</p>
   </div>
 
-  <div class="triple-containers-container">
-      <div class="triple-container">
-          <div class="triple-container-header">
-              Introduction to Financial Literacy
-          </div>
-          <div class="triple-container-body">
-              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
-              for some information on how to start your journey.
-          </div>
-          <div class="triple-container-footer">
-              <a>
-                  <button class="container-button">
-                      View More
-                  </button>
-              </a>
-          </div>
-      </div>
-      <div class="triple-container">
-          <div class="triple-container-header">
-              Budgeting Basics
-          </div>
-          <div class="triple-container-body">
-              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
-              for some information on how to start your journey.
-          </div>
-          <div class="triple-container-footer">
-              <a>
-                  <button class="container-button">
-                      View More
-                  </button>
-              </a>
-          </div>
-      </div>
-      <div class="triple-container">
-          <div class="triple-container-header">
-              Savings
-          </div>
-          <div class="triple-container-body">
-              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
-              for some information on how to start your journey.
-          </div>
-          <div class="triple-container-footer">
-              <a>
-                  <button class="container-button">
-                      View More
-                  </button>
-              </a>
-          </div>
-      </div>
+
+
+  <div class="footer">
+    <p>Disclaimer I am not a financial advisor this is just general advice about
+    financial literacy for educational purposes</p>
+  </div>
 </body>
 
 </html>
