--- a/quiz.html
+++ b/quiz.html
@@ -20,7 +20,7 @@
     <a class="active" href="index.html">Home</a>
     <a href="aboutus.html">About</a>
     <a href="modules.html">Modules</a>
-    <a href="contactus.html">Contact</a>
+    <a href="resources.html">Resources</a>
   </div>
   <div class="center">
   <div class="quiz-container" id="quiz">
