--- a/resources.html
+++ b/resources.html
@@ -4,41 +4,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us</title>
+  <title>Resources</title>
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="styles.css">
 </head>
 
 <body>
   <!-- Header-->
-
-
   <div class="header">
     <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
-      <span>About Us</span>
+      <span>Resources</span>
     </div>
   </div>
   <div class="nav-bar">
     <a href="index.html">Home</a>
-    <a class="active" href="aboutus.html">About</a>
+    <a href="aboutus.html">About</a>
     <a href="modules.html">Modules</a>
-    <a href="resources.html">Resources</a>
+    <a class="active" href="resources.html">Resources</a>
   </div>
 
+  <div class="resources-container">
+    <p>Other useful links</p>
+    <a href="https://www.maorimillionaire.com/" target="_blank">Maori Millionaire Blog</a>
 
-
-  <!-- Introduction container -->
-  <div class="intro-container">
-    <p> This educational resource has been created to help Māori
-      and Pasifika students learn about financial literacy. The aim is to
-      educate and empower Māori and Pasifika youth to embark on their journey
-      towards financial literacy. </p>
   </div>
+
 
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
     financial literacy for educational purposes</p>
   </div>
 </body>
-
 </html>
