This is the website before I present the content as a slideshow

--- a/modules.html
+++ b/modules.html
@@ -50,8 +50,9 @@
               Budgeting Basics
           </div>
           <div class="triple-container-body">
-              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
-              for some information on how to start your journey.
+              This module will take you through the basics of what a budget is,
+              the parts of a budget and the top spending areas for most
+              households.
           </div>
           <div class="triple-container-footer">
               <a href="budgeting.html">
@@ -63,11 +64,12 @@
       </div>
       <div class="triple-container">
           <div class="triple-container-header">
-              Savings
+              Expect the Unexpected
           </div>
           <div class="triple-container-body">
-              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
-              for some information on how to start your journey.
+              Fa'alavelave a common financial obligation in Samoan communities.
+              In this module we learn the importance of having an emergency fund
+              to be prepared for these unexpected times.
           </div>
           <div class="triple-container-footer">
               <a href="savings.html">
