--- a/quiz.html
+++ b/quiz.html
@@ -17,9 +17,9 @@
   </div>
 
   <div class="nav-bar">
-    <a class="active" href="index.html">Home</a>
+    <a class="active" >Home</a>
     <a href="aboutus.html">About</a>
-    <a href="modules.html">Modules</a>
+    <a href="modules.html" href="index.html">Modules</a>
     <a href="resources.html">Resources</a>
   </div>
   <div class="center">
