--- a/resources.html
+++ b/resources.html
@@ -23,11 +23,65 @@
     <a class="active" href="resources.html">Resources</a>
   </div>
 
-  <div class="resources-container">
-    <p>Other useful links</p>
-    <a href="https://www.maorimillionaire.com/" target="_blank">Maori Millionaire Blog</a>
+  <div class="triple-containers-container">
+      <div class="triple-container">
+          <div class="triple-container-header">
+              Maori Millionaire
+          </div>
+          <div class="triple-container-body">
+              Te Kahukura Boynton owner of Maori Millionire has a blog and
+              podcasts where she teaches various financial literacy topics
+              like investing, personal finance and self development.
+          </div>
+          <div class="triple-container-footer">
+              <a href="https://www.maorimillionaire.com/" target="
+              ">
+                  <button class="container-button">
+                      View Website
+                  </button>
+              </a>
+          </div>
+      </div>
+      <div class="triple-container">
+          <div class="triple-container-header">
+              Tales From a Financial Mess
+          </div>
+          <div class="triple-container-body">
+              Frances Cook tells her personal story about reaching financial
+              independence right from the start when she was a "financial mess".
+              The messages and lessons in this book are so empowering and proves
+              anyone can reach financial independence no matter what
+              the starting point is.
+          </div>
+          <div class="triple-container-footer">
+              <a href="budgeting.html">
+                  <button class="container-button">
+                      View More
+                  </button>
+              </a>
+          </div>
+      </div>
+      <div class="triple-container">
+          <div class="triple-container-header">
+              Expect the Unexpected
+          </div>
+          <div class="triple-container-body">
+              Fa'alavelave a common financial obligation in Samoan communities.
+              In this module we learn the importance of having an emergency fund
+              to be prepared for these unexpected times.
+          </div>
+          <div class="triple-container-footer">
+              <a href="savings.html">
+                  <button class="container-button">
+                      View More
+                  </button>
+              </a>
+          </div>
+      </div>
 
-  </div>
+      </div>
+
+
 
 
   <div class="footer">
