Tidied up the layout & added the budgeting slides for the slideshow in each module

--- a/aboutus.html
+++ b/aboutus.html
@@ -28,16 +28,31 @@
 
 
   <!-- Introduction container -->
-  <div class="intro-container">
-    <p> This educational resource has been created to help Māori
+  <h2>Purpose</h2>
+  <div class="content">
+    <p> Growing up I've seen lots of Maori and Pasifika families struggle with
+      finances. Maori and Pasifika people are more vulnerable to financial
+      issues. This is largely due to the lack of resources, discussions and
+      guidance around topics like managing debt, having multiple streams of
+      outcome, investing etc.</p>
+
+    <p>So I created this space to educate and provide resources for our Maori
+      and Pasifika youth so that we can thrive and not let money dictate
+      our lives but rather give us options in life. This educational resource has been created to help Māori
       and Pasifika students learn about financial literacy. The aim is to
       educate and empower Māori and Pasifika youth to embark on their journey
       towards financial literacy. </p>
+
+    <p>
+      Designed by our people, for our people. As I continue to develop this
+      website I strive to incorporate as much flexibility as possible because I
+      understand not everyone has the same learning needs and this should not
+      be a barrier.</p>
   </div>
 
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
-    financial literacy for educational purposes</p>
+      financial literacy for educational purposes</p>
   </div>
 </body>
 
