--- a/budgeting.html
+++ b/budgeting.html
@@ -22,10 +22,20 @@
     <a href="modules.html" class="active">Modules</a>
     <a href="resources.html">Resources</a>
   </div>
+  <!-- Budgeting Slideshow -->
+  <!-- <img class="mySlides" src="budgeting_slide1.png">
+<img class="mySlides" src="budgeting_slide2.png">
+<img class="mySlides" src="budgeting_slide3.png">
+<img class="mySlides" src="budgeting_slide4.png"> -->
 
+<!-- Buttons to control the slides -->
+<!-- <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+<button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
 
+<script src="slideshow.js">
 
-  <!-- Contact Us Form -->
+</script> -->
+  <!-- Transcript-->
   <div class="content">
     <h2>Budgeting Basics</h2>
     <p>Although it may seem basic, budgeting plays an important part in sorting
@@ -46,8 +56,12 @@
     transport so cautious planning in our budgets in this area will help save so
     much money which can be dedicated to other areas of spending.</p>
 
-    <a href="quiz.html">Budgeting Quiz</a>
+
   </div>
+
+  <button type="button" name="button">
+    <a href="quiz.html">Budgeting Quiz</a>
+  </button>
 
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
