--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
 
 
   <!-- Introduction container -->
-  <div class="intro-container">
+  <div class="content">
     <p> Talofa Lava! Kia Ora! Warm Pacific Greetings! Welcome!</p>
+  </div>
+
+  <div class="center">
+    <img src="cover.jpg" alt="student doing the budgeting quiz" width="550px"
+    height="430px">
   </div>
 
 
