--- a/quiz.html
+++ b/quiz.html
@@ -17,9 +17,9 @@
   </div>
 
   <div class="nav-bar">
-    <a class="active" >Home</a>
+    <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
-    <a href="modules.html" href="index.html">Modules</a>
+    <a href="modules.html" class="active">Modules</a>
     <a href="resources.html">Resources</a>
   </div>
   <div class="center">
@@ -53,6 +53,10 @@
   </div>
 </div>
   <script src="script.js"></script>
+  <div class="footer">
+    <p>Disclaimer I am not a financial advisor this is just general advice about
+    financial literacy for educational purposes</p>
+  </div>
 </body>
 
 </html>
