--- a/resources.html
+++ b/resources.html
@@ -63,17 +63,18 @@
       </div>
       <div class="triple-container">
           <div class="triple-container-header">
-              Expect the Unexpected
+              Girls That Invest
           </div>
           <div class="triple-container-body">
-              Fa'alavelave a common financial obligation in Samoan communities.
-              In this module we learn the importance of having an emergency fund
-              to be prepared for these unexpected times.
+              Sim & Sonya founded this amazing educational podcast that educates
+              people on all things investing. Their podcast is an awesome
+              resource especially if investing is something you are interestd
+              in.
           </div>
           <div class="triple-container-footer">
-              <a href="savings.html">
+              <a href="https://girlsthatinvest.com/" target="_blank">
                   <button class="container-button">
-                      View More
+                      View Website
                   </button>
               </a>
           </div>
