All modules are completed with content and each have a quiz

--- a/budgeting.html
+++ b/budgeting.html
@@ -60,7 +60,7 @@
   </div>
 
   <button type="button" name="button">
-    <a href="quiz.html">Budgeting Quiz</a>
+    <a href="budgetingquiz.html">Budgeting Quiz</a>
   </button>
 
   <div class="footer">
