--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
   <div class="center">
-    <img src="cover.jpg" alt="student doing the budgeting quiz" width="550px"
+    <img src="cover.jpg" alt="Student doing the budgeting quiz" width="550px"
     height="430px">
   </div>
 
