--- a/intro.html
+++ b/intro.html
@@ -17,36 +17,40 @@
     </div>
   </div>
   <div class="nav-bar">
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
-    <a href="modules.html">Modules</a>
+    <a class="active" href="modules.html">Modules</a>
     <a href="resources.html">Resources</a>
   </div>
 
 
 
   <!-- Contact Us Form -->
+  <h2>Introduction to Financial Literacy: Money Mindsets</h2>
   <div class="content">
-    <h2>Budgeting Basics</h2>
-    <p>Although it may seem basic, budgeting plays an important part in sorting
-    out our finances.</p>
+    <p>Financial literacy. Although this may sound big and scary, do not stress
+    Money Modules is here to break down these confusing concepts</p>
 
-    <p>First of all you may be asking "What is a budget?" A budget is a statement
-    that records your planned expenditure and your expected income over a certain
-    period of time. This basically means how much you think you'll spend and how
-    much you think you'll earn over a period of time usually a month.</p>
+    <p>First of all lets discuss money mindsets. Our money mindset is our values
+    and beliefs that influence how we choose to manage our money.</p>
 
-    <p>Income is anything coming into your account like gifts, lunch money, wages or
-    even dividends (which is a word used for income earned on shares).</p>
+    <p>Understanding our money mindsets will help us to identify what really
+    matters to us and our potential weaknesses where we could develop better
+    money habits. Financial indepence will be the end goal for most of us, where
+    money give us options in life. For example the option to buy our own home,
+    the option to invest in our education, the option to help out our families
+    while still being able to provide for our own etc.</p>
 
-    <p>Expenses is anything going out of your account like
-    car repairs, rent, food, transport etc.</p>
+    <p>It's important to remeber that financial indpendence is a long term
+    journey. So when setting our financial goals the aim isn't to get rid of
+    all the stuff we enjoy. For example we may value going out with friends, in
+    the long term getting rid of this isn't very sustainable instead we may try
+    to limit outings to once a week instead of 3-4 times a week</p>
 
-    <p>For most households the top 3 areas of spending are shelter, food and
-    transport so cautious planning in our budgets in this area will help save so
-    much money which can be dedicated to other areas of spending.</p>
 
-    <a href="quiz.html">Budgeting Quiz</a>
+
+
+    <a href="introquiz.html">Money Mindsets Quiz</a>
   </div>
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
