--- a/savings.html
+++ b/savings.html
@@ -13,13 +13,13 @@
   <div class="header">
     <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
-      <span>Savings</span>
+      <span>Expect the Unexpected: Fa'alavelave</span>
     </div>
   </div>
   <div class="nav-bar">
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
-    <a href="modules.html">Modules</a>
+    <a class="active" href="modules.html">Modules</a>
     <a href="resources.html">Resources</a>
   </div>
 
@@ -27,26 +27,40 @@
 
   <!-- Resources Form -->
   <div class="content">
-    <h2>Budgeting Basics</h2>
-    <p>Although it may seem basic, budgeting plays an important part in sorting
-    out our finances.</p>
+    <h2>Expect the Unexpected: Fa'alavelave</h2>
+    <p>An example of a major financial issue in Samoan communities is managing
+    fa’alavelave which can be funerals, weddings, birthdays etc where there is
+    a financial obligation to give money. Similar variations also exist in other
+    Pasifika and Māori communities.</p>
 
-    <p>First of all you may be asking "What is a budget?" A budget is a statement
-    that records your planned expenditure and your expected income over a certain
-    period of time. This basically means how much you think you'll spend and how
-    much you think you'll earn over a period of time usually a month.</p>
+    <p>Family and giving are extremely valued in Samoan culture therefore
+    it’s in or nature to want to give back and help out our families/communities
+    in the form of money donations. This beautiful part of our culture can
+    quickly become out of hand when families prioritise this over putting food
+    on the table for their own households.</p>
 
-    <p>Income is anything coming into your account like gifts, lunch money, wages or
-    even dividends (which is a word used for income earned on shares).</p>
+    <p>Fa’alavelave like funerals often come up unexpectedly so families
+    have to find a way to come up with quick cash. This usually means cutting
+    out household spending or borrowing a loan which can quickly become a heavy
+    financial burden especially with loan sharks.</p>
 
-    <p>Expenses is anything going out of your account like
-    car repairs, rent, food, transport etc.</p>
+    <p>This poses the question how do we develop a money mindset and/or money
+    habits that allow us to contribute to family/cultural practices but not at
+    the expense of our own financial well-being? We can’t control when a
+    fa’alavelave will happen however we can attempt to prepare by putting money
+    aside for a rainy day and demonstrates the importance of having an emergency
+    fund for when unexpected events like a fa'alavelave come up.</p>
 
-    <p>For most households the top 3 areas of spending are shelter, food and
-    transport so cautious planning in our budgets in this area will help save so
-    much money which can be dedicated to other areas of spending.</p>
+    <p>For some families this may not be possible as they
+    trying to live from pay day to pay day therefore finding a balance is
+    extremely important even if this means contributing later or in a different
+    way. The most effective ways of dealing with fa’alavelave is through being
+    proactive instead of reactive because it can have many negative
+    flow-on effects.</p>
 
-    <a href="quiz.html">Budgeting Quiz</a>
+
+
+    <a href="savingsquiz.html">Expect the Unexpected Quiz</a>
   </div>
 
 <div class="footer">
