--- a/savingsquiz.html
+++ b/savingsquiz.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz</title>
+  <title>Expect the Unexpected Quiz</title>
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="styles.css">
 </head>
 
@@ -12,7 +12,7 @@
   <div class="header">
     <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
-      <span>Budgeting Quiz</span>
+      <span>Expect the Unexpected Quiz</span>
     </div>
   </div>
 
@@ -52,7 +52,7 @@
     <button id="submit">Submit</button>
   </div>
 </div>
-  <script src="script.js"></script>
+  <script src="savings.js"></script>
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
     financial literacy for educational purposes</p>
